--- a/medscan/requirements.txt
+++ b/medscan/requirements.txt
@@ -43,12 +43,12 @@ six==1.15.0
 SQLAlchemy==1.3.18
 stripe==2.48.0
 structlog==16.1.0
-tensorboard==1.13.1
 tensorflow==1.15.2
-tensorflow-estimator==1.13.0
-tensorflow-tensorboard==1.5.1
 termcolor==1.1.0
 urllib3==1.25.9
 Werkzeug==0.16.1
 WTForms==2.3.1
 zipp==1.2.0
+Pillow==7.0.0
+opencv-python
+email_validator
