resolved path issue

--- a/medscan/Dockerfile
+++ b/medscan/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.5.7-slim
+FROM python:3.6.15-slim-buster 
 
 RUN apt-get update && apt-get install libgl1 libglib2.0-0 libsm6 libxrender1 libxext6 -y
 RUN apt-get install -y apt-utils build-essential gcc
 
 
-WORKDIR /opt
+WORKDIR /medscan
 
 COPY requirements.txt requirements.txt
 RUN pip install --upgrade pip \
