--- a/medscan/docker-compose.yml
+++ b/medscan/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     build: 
       dockerfile: Dockerfile
     volumes:
-      - data:/opt/app
+      - data:/web
+      - /home/sja/projects/personal/Final_year_project/medscan:/medscan
     ports:     
      - "5000:5000"
     # command: "python3 manage.py initdb"
@@ -12,3 +13,6 @@ services:
 
 volumes:
   data:
+
+
+# OpenCV(4.4.0)
