--- a/medscan/requirements.txt
+++ b/medscan/requirements.txt
@@ -16,7 +16,7 @@ Flask-Mail==0.9.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
-gast==0.3.3
+gast==0.2.2
 grpcio==1.30.0
 gunicorn==19.4.5
 h5py==2.10.0
@@ -50,5 +50,5 @@ Werkzeug==0.16.1
 WTForms==2.3.1
 zipp==1.2.0
 Pillow==7.0.0
-opencv-python
+opencv-python==3.4.7.28
 email_validator
